# Optimizing_L.A._cpp_lib

./: LICENSE.md  README.md
linpack/: README.md
linpack/LA_lib/: linearAlgebra.hpp  main.cpp
linpack/LA_library/: CMakeLists.txt  main.cpp
linpack/LA_library/LA_lib/: linearAlgebra.hpp  matrix.hpp  matrix_operators.hpp  matrix_transpose.hpp  matrix_view.hpp
linpack/LA_library_optimized/: CMakeLists.txt  main.cpp
linpack/LA_library_optimized/LA_lib/: linearAlgebra.hpp  matrix.hpp  matrix_operators.hpp  matrix_transpose.hpp  matrix_view.hpp
linpack/linpack_cpp/: CMakeLists.txt
linpack/linpackc.new/: CMakeLists.txt  main.c
linpack/linpackcpp/: CMakeLists.txt  main.cpp
linpack/linpackcpp.new/: CMakeLists.txt  main.cpp
linpack/linpackcpp/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  linalg
linpack/linpackcpp_functions/: CMakeLists.txt  main.cpp
linpack/linpackcpp_original/: CMakeLists.txt  general_definitions.hpp  main.cpp
linpack/openMP_prueba/: CMakeLists.txt  main.cpp
linpack/openMP_prueba/LA_lib/: checker.hpp  linearAlgebra.hpp  matrix.hpp  matrix_operators.hpp  matrix_transpose.hpp  matrix_view.hpp
